# evolve-physics

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  build_python.sh  evolve-physics.gdextension  pyproject.toml
.github/workflows/: rust.yml
examples/: evolve_training.py  simple_simulation.rs
godot/: README.md  register_physics.gd
src/: body.rs  collision.rs  godot_plugin.rs  lib.rs  python.rs  shapes.rs  world.rs
tests/: integration_tests.rs
