[package]
name = "evolve-physics"
version = "0.1.0"
edition = "2021"
authors = ["Evolution Training Physics Engine"]
description = "A lightweight, deterministic physics engine for ML/evolution training simulations"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "evolve_physics"

[dependencies]
rapier2d = { version = "0.22", features = ["serde-serialize", "parallel"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings
[dependencies.pyo3]
version = "0.23"
features = ["extension-module", "auto-initialize"]

[dev-dependencies]
approx = "0.5"

[profile.release]
# Optimize for speed in release builds
opt-level = 3
lto = true
codegen-units = 1